--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <!-- Left Portion with Background Image -->
+            <!-- eft Portion with Background Image -->
             <div class="col-md-6 left-bg left">
                 <div class="logo">
                     <p  class="logo" style=" font-style: italic">Pisocial</p>
